<resources>
    <string name="app_name">recyleView</string>
    <string name="review">review</string>
    <string name="reviewvilla">reviewvilla</string>
    <string name="lokasi_villa">lokasi villa</string>
    <string name="price">price</string>
    <string name="harga_villa">harga_villa</string>
    <string-array name="villa">
        <item>Villa Mawar</item>
        <item>Villa Melati</item>
        <item>Villa Jepun</item>
        <item>Villa Sekar</item>
    </string-array>
    <string-array name="star">
        <item>4.5</item>
        <item>4.7</item>
        <item>4.4</item>
        <item>4.9</item>
    </string-array>
    <string-array name="deskripsi">
        <item>Rp. 2.000.000</item>
        <item>Rp. 1.000.000</item>
        <item>Rp. 4.000.000</item>
        <item>Rp. 3.000.000</item>
    </string-array>
</resources>